# minimal-python-template

./: LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml
src/minimal_python_template/: __init__.py  __main__.py
